warp/base/warp-demo-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
    argocd.argoproj.io/hook: Sync
    argocd.argoproj.io/sync-wave: "1"
  creationTimestamp: null
  labels:
    io.kompose.service: warp-demo-db
  name: warp-demo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: warp-demo-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: warp-demo-db
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              value: postgres_password
          image: postgres
          name: warp-demo-db
          ports:
          - containerPort: 5432
            protocol: TCP
          volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: storage
          resources: {}
      restartPolicy: Always
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: demo-warp-db-claim
status: {}
