warp/base/warp-demo-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: warp-demo-nginx
  name: warp-demo-nginx
  namespace: warp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: warp-demo-nginx
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: warp-demo-nginx
    spec:
      containers:
        - image: nginx
          name: warp-demo-nginx
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              name: warp-demo-nginx-claim0
      restartPolicy: Always
      volumes:
        - name: warp-demo-nginx-claim0
          configMap:
            name: nginx-configmap
status: {}
