warp/base/warp-demo-wsgi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
    argocd.argoproj.io/hook: Sync
    argocd.argoproj.io/sync-wave: "2"
  creationTimestamp: null
  labels:
    io.kompose.service: warp-demo-wsgi
  name: warp-demo-wsgi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: warp-demo-wsgi
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: warp-demo-wsgi
    spec:
      containers:
        - env:
            - name: WARP_DATABASE
              value: postgresql://postgres:postgres_password@warp-demo-db:5432/postgres
            - name: WARP_DATABASE_INIT_SCRIPT
              value: '["sql/schema.sql","sql/sample_data.sql"]'
            - name: WARP_LANGUAGE_FILE
              value: i18n/en.js
            - name: WARP_SECRET_KEY
              value: mysecretkey
          image: vicen404/warp:a9a453ffbb7fee44347aff0ff1454fd10dd5f931
          name: warp-demo-wsgi
          ports:
          - containerPort: 8000
            protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
