warp/base/warp-demo-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: warp-demo-nginx
  name: warp-demo-nginx
  namespace: warp
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
  selector:
    io.kompose.service: warp-demo-nginx
status:
  loadBalancer: {}
