warp/base/warp-demo-wsgi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: warp-demo-wsgi
  name: warp-demo-wsgi
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: warp-demo-wsgi
status:
  loadBalancer: {}
